test/classes/delete-free/coercions-covariant-ref.good
coercions-covariant-ref.chpl:16: In function 'testB':
coercions-covariant-ref.chpl:18: error: unresolved call 'acceptOwnedMyClassB(_owned(SubClass))'
coercions-covariant-ref.chpl:12: note: candidates are: acceptOwnedMyClassB(ref own: Owned(MyClass))
